--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "server-update": "pm2 deploy production update"
+    "deploy": "pm2 deploy production update"
   },
   "repository": {
     "type": "git",
